Adding github link

--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,15 @@
   --blanket-cols: repeat(7, 1fr);
   --blanket-rows: repeat(14, 1fr);
   --glow: 0 0 5px var(--color-amber-200);
+
+  --color-canary: #f7c324;
 }
 
 button {
   @apply cursor-pointer;
+}
+
+a,
+button {
+  @apply transition-all duration-300;
 }
