--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 @theme {
   --aspect-blanket: 665 / 813;
   --blanket-cols: repeat(7, 1fr);
-  --blanket-rows: repeat(14, 1fr);
+  --blanket-rows: repeat(14, auto);
   --glow: 0 0 5px var(--color-amber-200);
 
   --color-canary: #f7c324;
